--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=spring-boot-starter-parent
-spring.datasource.url=jdbc:mysql://localhost:3306/olympics?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/olympics
 spring.datasource.username=root
 spring.datasource.password=Moeder12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=drop
 
 spring.messages.basename=i18n/messages
 server.error.whitelabel.enabled=false
-logging.level.org.springframework.security=>TRACE
