--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
     <artifactId>spring-data-jpa</artifactId>   
 
 </dependency>
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
